...
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/pinputPromptsVLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccountTV">

            <LinearLayout
                android:id="@+id/createEmailHLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createEmailTV"
...
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="Email:"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/createEmailEV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/createUsernameHLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
...
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="Username:"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/createUsernameEV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/createPasswordHLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
...
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="Password:"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/createPasswordEV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reenterPasswordHLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
...
                    android:lines="2"
                    android:paddingBottom="20dp"
                    android:text="Re-Enter \nPassword:"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/reenterPasswordEV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragmentNavButtonsHLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="Sign Up" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
...
